Fix TriRank bipolar aspect semantics and rewrite the data generator
The rating attributes are bipolar descriptive axes (Lý thuyết ↔ Thực hành,
Cá nhân ↔ Nhóm) where neither pole is better. Three separate defects meant a
user's stated preference barely reached the ranking and the explanation
shown alongside it measured something else entirely.

Aspect vocabulary (TriRankAspects, TriRankService, TriRankRecommendationService)

TriRank's aspect preference vector a_0 is a unipolar interest weight, so a
bipolar target could not be expressed in it: asking for "Theo hướng dẫn"
(target 1) was encoded as "I don't care about this axis". And because a_0 is
L1-normalised, a uniform rescaling cancelled out, so setting every axis to 1
produced a byte-identical vector to setting every axis to 5 and measurably
the same ranking for all 179 courses.

Each axis now contributes two aspects, <attribute>@low and <attribute>@high,
and a target is split into weights on them. The export drives the split from
each attribute's own terciles rather than a hard-coded cut, because the
observed spread is a property of the data (38/24/38 on one dataset, 37/30/34
on another). Both sides of the contract go through TriRankAspects; a mismatch
would not throw, it would silently drop every preference.

The export previously kept only scores >= 3 and wrote them all as the same
:good:1 token, so the score was discarded twice over: every surviving value
collapsed to a constant, and scores of 1-2 produced no edge at all, leaving
the low half of every axis invisible. Edge coverage rises from 61.5% to 75.8%
and the edges now carry direction.

Measured end-to-end on the real tenant's scores: top-10 overlap between
"every axis at 1" and "every axis at 5" falls from 100% to 0%; all 7 axes now
return courses that genuinely sit at the requested pole (mean 1.5-2.0 asking
low against 4.2-4.4 asking high); and over 12 random full target vectors the
mean gap between a recommended course's attribute scores and the target